# routers/postingsRouter.js
@@ -1,4 +1,4 @@
-import express from "express";
+import express from 'express';
 import {
   getAllPostings,
   postPostings,
@@ -6,37 +6,37 @@ import {
   patchPosting,
   deletePosting,
   postLike,
-} from "../controller/postings.js";
+} from '../controller/postings.js';
 import {
   createComments,
   getAllComments,
   editComments,
   deleteComments,
-} from "../controller/comments.js";
-import { uploadFile } from "../middlewares/uploadMiddleware.js";
-// import { authMiddleware } from '../middlewares/authMiddleware.js';
+} from '../controller/comments.js';
+import { uploadFile } from '../middlewares/uploadMiddleware.js';
+import { authMiddleware } from '../middlewares/authMiddleware.js';
 const postingRouter = express.Router();
 
 postingRouter
-  .route("/")
+  .route('/')
   .get(getAllPostings)
-  .post(uploadFile.single("image"), postPostings);
+  .post(uploadFile.single('image'), postPostings);
 
 postingRouter
-  .route("/:postingId")
+  .route('/:postingId')
   .get(getOnePosting)
   .delete(deletePosting)
   .patch(patchPosting);
 
-postingRouter.route("/:postingId/like").post(postLike);
+postingRouter.route('/:postingId/like').post(postLike);
 
 postingRouter
-  .route("/:postingId/comments")
-  .post(createComments)
+  .route('/:postingId/comments')
+  .post(authMiddleware, createComments)
   .get(getAllComments)
-  .patch(editComments)
-  .delete(deleteComments);
+  .patch(authMiddleware, editComments)
+  .delete(authMiddleware, deleteComments);
 
-postingRouter.route("/:id/comments");
+postingRouter.route('/:id/comments');
 
 export default postingRouter;
